--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API_KEY='27d8d9294emsh097d885900e8e9fp14a3f6jsn52878245a6a0'
-API_BASE_URL='https://irctc1.p.rapidapi.com/api/v1/getTrainScheduleV2' 
+API_KEY='YOUR_API_KEY'
+API_BASE_URL='YOUR_BASE_URL' 
