some more specifications

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-API_KEY='YOUR_API_KEY'
-API_BASE_URL='YOUR_BASE_URL' 
+API_KEY='a094c92050msh606fb861fa2a690p173fc8jsnded98f3b5e7b'
+API_BASE_URL='https://irctc1.p.rapidapi.com/api/v3/trainBetweenStations'
+JWT_Secret_Key="4xItngi0mZAwMkn3ALjjpArXaQPTJGYVQIh7SgMuY5E" 
+DATABASE_URL = "sqlite:///./railway.db"
+
+
